--- a/src/Smartstore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -93,7 +93,7 @@
                             <span>@T("Common.Back")</span>
                         </a>
                         <input type="submit" id="nextstep" name="nextstep" class="d-none" />
-                        <button type="button" class="btn btn-warning btn-lg new-address-next-step-button">
+                        <button type="button" class="btn btn-primary btn-lg new-address-next-step-button">
                             <span>@T("Checkout.NextButton")</span>
                             <i class="fa fa-angle-right"></i>
                         </button>
