--- a/src/Smartstore.Web/Views/Checkout/Partials/CheckoutOrderTotals.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/CheckoutOrderTotals.cshtml
@@ -27,7 +27,7 @@
         </div>
 
         <zone name="order_summary_actions" remove-if-empty="true" replace-content="true">
-            <div class="col-12 mt-3 cart-footer-actions">
+            <div class="col-12 mt-2 cart-footer-actions">
                 <div sm-if="Model.IsConfirmPage && confirmModel.TermsOfService.HasValue()" class="terms-of-service">@Html.Raw(confirmModel.TermsOfService)</div>
 
                 <zone name="order_summary_buttons_before" />
@@ -43,7 +43,7 @@
                     else
                     {
                         <input type="submit" id="nextstep" name="nextstep" class="d-none" />
-                        <button type="button" class="btn btn-warning btn-lg btn-block @Model.NextStepClass" onclick="return false;">
+                        <button type="button" class="btn btn-primary btn-lg btn-block @Model.NextStepClass" onclick="return false;">
                             <span>@T("Checkout.NextButton")</span>
                             <i class="fa fa-angle-right"></i>
                         </button>
