Minor CSS change

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
@@ -371,5 +371,6 @@
     font-size: 90%;
     margin-block-end: 1rem;
     line-height: normal;
+    color: var(--gray-700);
     //text-wrap: balance;
 }
