--- a/src/Smartstore.Web/Views/Checkout/Partials/AddAddressButton.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/AddAddressButton.cshtml
@@ -5,7 +5,7 @@
     <div class="fs-display-3 text-muted">
         <i class="fa fa-plus"></i>
     </div>
-    <div class="align-self-stretch h-100 d-flex">
+    <div class="mt-auto">
         <button type="button" class="btn btn-primary btn-block add-new-address align-self-end">
             <span>@T("Admin.Customers.Customers.Addresses.AddNew")</span>
             <i class="fa fa-angle-right"></i>
