Updated a string resource and a minor fix

--- a/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
@@ -76,8 +76,7 @@
             <div class="col col-auto">
                 <a href="@Url.RouteUrl("ShoppingCart")" class="btn btn-secondary btn-sm">
                     <i class="fa fa-angle-left"></i>
-                    @* TODO: (mg) Should be labeled "Edit cart" / "Warenkorb bearbeiten" *@
-                    <span>@T("ShoppingCart.BackToCart")</span>
+                    <span>@T("ShoppingCart.EditCart")</span>
                 </a>
             </div>
         </div>
