--- a/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
@@ -42,7 +42,7 @@
             <div class="col col-auto">
                 <a href="@Url.RouteUrl("ShoppingCart")" class="btn btn-secondary btn-sm">
                     <i class="fa fa-angle-left"></i>
-                    <span>@T("ShoppingCart.BackToCart")</span>
+                    <span>@T("ShoppingCart.EditCart")</span>
                 </a>
             </div>
         </div>
