--- a/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
@@ -4,6 +4,7 @@
 @model CheckoutConfirmModel
 
 @{
+    // TODO: (mg) Make a global setting for the visibility of the second "Buy" footer beneath the cart. It should be possible to switch it off. Not everyone lives in the EU. Default: true,
     var cart = Model.ShoppingCart;
     var shippingInfoUrl = await Url.TopicAsync("ShippingInfo", true);
 
