Checkout: added a setting for the second buy-button on confirmation page

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/ShoppingCart.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/ShoppingCart.cshtml
@@ -282,6 +282,15 @@
                 </div>
                 <div class="adminRow">
                     <div class="adminTitle">
+                        <smart-label asp-for="ShowSecondBuyButtonBelowCart" />
+                    </div>
+                    <div class="adminData">
+                        <setting-editor asp-for="ShowSecondBuyButtonBelowCart"></setting-editor>
+                        <span asp-validation-for="ShowSecondBuyButtonBelowCart"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
                         <smart-label asp-for="ShowConfirmOrderLegalHint" />
                     </div>
                     <div class="adminData">
