--- a/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
@@ -63,7 +63,7 @@ else
     </div>
 }
 
-<div class="bottom-order-total-container card card-body">
+<div sm-if="Model.ShowSecondBuyButtonBelowCart" class="bottom-order-total-container card card-body">
     <div class="row">
         <div class="col col-auto cart-buttons">
             <button type="button" class="btn btn-danger btn-lg @Model.NextStepClass" onclick="return false;">
