The menu tag is self closing

--- a/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -40,7 +40,7 @@
                             @Html.Raw(T("Footer.Info"))
                         </h4>
                         <div class="collapse nav-collapse" id="footer-info">
-                            <menu name="FooterInformation" template="LinkList"></menu>
+                            <menu name="FooterInformation" template="LinkList" />
                         </div>
                     </nav>
                 </div>
@@ -52,7 +52,7 @@
                             <span class="d-md-none">@Html.Raw(T("Footer.Service.Mobile"))</span>
                         </h4>
                         <div class="collapse nav-collapse" id="footer-service">
-                            <menu name="FooterService" template="LinkList"></menu>
+                            <menu name="FooterService" template="LinkList" />
                         </div>
                     </nav>
                 </div>
@@ -64,7 +64,7 @@
                             <span class="d-md-none">@Html.Raw(T("Footer.Company.Mobile"))</span>
                         </h4>
                         <div class="collapse nav-collapse" id="footer-company">
-                            <menu name="FooterCompany" template="LinkList"></menu>
+                            <menu name="FooterCompany" template="LinkList" />
                         </div>
                     </nav>
                 </div>
