--- a/src/Smartstore.Web/Views/Shared/Components/TopBar/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/TopBar/Default.cshtml
@@ -22,7 +22,7 @@
             <a asp-route="ContactUs" class="menubar-link">@T("ContactUs")</a>
         }
 
-        <menu name="HelpAndService" template="Dropdown"></menu>
+        <menu name="HelpAndService" template="Dropdown" />
 
         @if (Model.IsCustomerImpersonated)
         {
