--- a/src/Smartstore.Modules/Smartstore.ShippingByWeight/Views/_ViewImports.cshtml
+++ b/src/Smartstore.Modules/Smartstore.ShippingByWeight/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 
 @using System
 @using Smartstore
+@using Smartstore.ShippingByWeight.Models
 @using System.Globalization
 @using Humanizer
 @using Smartstore.Web.TagHelpers.Admin
