--- a/src/Smartstore.Web/wwwroot/admin/_dashboard.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_dashboard.scss
@@ -500,6 +500,7 @@
 
     .news-feed {
         grid-column: 11 / -1;
+        // TODO: (mh) Shitty fix! Try another approach!
         grid-row: 1 / 8;
     }
 
