--- a/src/Smartstore.Web/Views/Identity/Login.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Login.cshtml
@@ -17,156 +17,175 @@
     var currentUser = WorkContext.CurrentCustomer;
 }
 
+@{
+    async Task SignInBlock()
+    {
+        <h3 class="text-center mb-4">
+            @T("Account.Login.ReturningCustomer")
+        </h3>
+
+        <div asp-validation-summary="ModelOnly">@T("Account.Login.Unsuccessful")</div>
+
+        <!-- SignIn Form -->
+        <form asp-route="Login" asp-route-returnurl="@returnUrl" method="post" autocomplete="off">
+            <input asp-for="CustomerLoginType" type="hidden" />
+            @if (Model.CustomerLoginType == CustomerLoginType.Username)
+            {
+                @*<div class="form-group">
+    <div class="input-group input-group-lg has-icon">
+    <input asp-for="Username" class="username rounded" autofocus="autofocus" />
+    <span class="input-group-icon text-muted">
+    <i class="icm icm-user"></i>
+    </span>
+    </div>
+    <span asp-validation-for="Username"></span>
+    </div> *@
+                <div class="form-floating mb-3">
+                    <input asp-for="Username" class="username" placeholder="@Html.DisplayNameFor(x => x.Username)" />
+                    <label asp-for="Username"></label>
+                    <span asp-validation-for="Username"></span>
+                </div>
+            }
+            else if (Model.CustomerLoginType == CustomerLoginType.Email)
+            {
+                @*<div class="form-group">
+    <div class="input-group input-group-lg has-icon">
+    <input asp-for="Email" class="email rounded" autofocus="autofocus" />
+    <span class="input-group-icon text-muted">
+    <i class="icm icm-envelope-open"></i>
+    </span>
+    </div>
+    <span asp-validation-for="Email"></span>
+    </div> *@
+                <div class="form-floating mb-3">
+                    <input asp-for="Email" class="email" placeholder="@Html.DisplayNameFor(x => x.Email)" />
+                    <label asp-for="Email"></label>
+                    <span asp-validation-for="Email"></span>
+                </div>
+            }
+            else
+            {
+                @*<div class="form-group">
+    <div class="input-group input-group-lg has-icon">
+    <input asp-for="UsernameOrEmail" class="username rounded" autofocus="autofocus" />
+    <span class="input-group-icon text-muted">
+    <i class="icm icm-user"></i>
+    </span>
+    </div>
+    <span asp-validation-for="UsernameOrEmail"></span>
+    </div>*@
+                <div class="form-floating mb-3">
+                    <input asp-for="UsernameOrEmail" class="username" placeholder="@Html.DisplayNameFor(x => x.UsernameOrEmail)" />
+                    <label asp-for="UsernameOrEmail"></label>
+                    <span asp-validation-for="UsernameOrEmail"></span>
+                </div>
+            }
+
+            @*<div class="form-group">
+    <div class="input-group input-group-lg has-icon">
+    <input asp-for="Password" class="password rounded" autocomplete="off" />
+    <span class="input-group-icon text-muted">
+    <i class="icm icm-shield"></i>
+    </span>
+    </div>
+    <span asp-validation-for="Password"></span>
+    </div> *@
+            <div class="form-floating mb-3">
+                <input asp-for="Password" class="password" autocomplete="off" placeholder="@Html.DisplayNameFor(x => x.Password)" />
+                <label asp-for="Password"></label>
+                <span asp-validation-for="Password"></span>
+                <button type="button" class="btn btn-secondary btn-flat btn-no-border btn-icon btn-sm rounded-circle position-absolute" style="right: 8px; top: 50%; transform: translateY(-50%)">
+                    <i class="fa fa-eye-slash"></i>
+                </button>
+            </div>
+
+            <div class="form-group d-flex justify-content-between">
+                <input asp-for="RememberMe" sm-switch="false" />
+                <div class="forgot-password">
+                    <a asp-route="PasswordRecovery" rel="nofollow">@T("Account.Login.ForgotPassword")</a>
+                </div>
+            </div>
+
+            <captcha sm-enabled="Model.DisplayCaptcha" class="form-group" />
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-lg btn-block btn-login btn-prevent-multiclick">
+                    @T("Account.Login.LoginButton")
+                </button>
+            </div>
+
+            <div sm-suppress-if-empty-zone="external_auth_buttons" class="form-group external-auth-buttons mb-0">
+                <div class="text-center text-uppercase mb-2">
+                    - @T("Common.Or") -
+                </div>
+                <div class="vstack gap-2">
+                    <zone name="external_auth_buttons" />
+                </div>
+            </div>
+
+            <zone name="after_login_buttons" />
+        </form>
+    }
+
+    async Task RegisterBlock()
+    {
+        <div class="page-info">
+            @await Component.InvokeAsync("TopicBlock", new { systemName = "LoginRegistrationInfo", bodyOnly = true, isLead = true })
+        </div>
+
+        <div class="register-block">
+            @if (Model.CheckoutAsGuest)
+            {
+                @await Component.InvokeAsync("TopicBlock", new { systemName = "CheckoutAsGuestOrRegister", bodyOnly = true })
+                <div class="row sm-gutters">
+                    <div class="col-sm-6 col-md-12 col-lg-6 pb-2 pb-lg-0">
+                        <a class="btn btn-warning btn-lg btn-block register-button" href="@registerUrl">
+                            @T("Account.Register.Button")
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-12 col-lg-6">
+                        <a class="btn btn-secondary btn-lg btn-block checkout-as-guest-button" asp-route="Checkout">
+                            <span>@T("Account.Login.CheckoutAsGuest")</span>
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="row">
+                    <div class="col-12 col-lg-auto">
+                        <a class="btn btn-warning btn-lg btn-block register-button" href="@registerUrl">
+                            @T("Account.Register.Button")
+                        </a>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+}
+
 <div class="page login-page">
-	<div class="page-title">
-		<h1>@T("Account.Login.Welcome")</h1>
-	</div>
-
-	<div class="row mt-4">
-		<div class="col-12 col-md-7 col-lg-6 col-xl-5 col-xxl-4 order-md-last">
-			<div class="card shadow-sm p-4 mb-5 mb-md-0 login-box">
-				<h3 class="h4 mb-0">
-					@T("Account.Login.ReturningCustomer")
-				</h3>
-				<hr />
-
-                <div asp-validation-summary="ModelOnly">@T("Account.Login.Unsuccessful")</div>
-
-				<!-- SignIn Form -->
-                <form asp-route="Login" asp-route-returnurl="@returnUrl" method="post" autocomplete="off">
-                    <input asp-for="CustomerLoginType" type="hidden" />
-                    @if (Model.CustomerLoginType == CustomerLoginType.Username)
-                    {
-                        @*<div class="form-group">
-                            <div class="input-group input-group-lg has-icon">
-                                <input asp-for="Username" class="username rounded" autofocus="autofocus" />
-                                <span class="input-group-icon text-muted">
-                                    <i class="icm icm-user"></i>
-                                </span>
-                            </div>
-                            <span asp-validation-for="Username"></span>
-                        </div> *@
-                        <div class="form-floating mb-3">
-                            <input asp-for="Username" class="username" placeholder="@Html.DisplayNameFor(x => x.Username)" />
-                            <label asp-for="Username"></label>
-                            <span asp-validation-for="Username"></span>
-                        </div>
-                    }
-                    else if (Model.CustomerLoginType == CustomerLoginType.Email)
-                    {
-                        @*<div class="form-group">
-                            <div class="input-group input-group-lg has-icon">
-                                <input asp-for="Email" class="email rounded" autofocus="autofocus" />
-                                <span class="input-group-icon text-muted">
-                                    <i class="icm icm-envelope-open"></i>
-                                </span>
-                            </div>
-                            <span asp-validation-for="Email"></span>
-                        </div> *@
-                        <div class="form-floating mb-3">
-                            <input asp-for="Email" class="email" placeholder="@Html.DisplayNameFor(x => x.Email)" />
-                            <label asp-for="Email"></label>
-                            <span asp-validation-for="Email"></span>
-                        </div>
-                    }
-                    else
-                    {
-                        @*<div class="form-group">
-                            <div class="input-group input-group-lg has-icon">
-                                <input asp-for="UsernameOrEmail" class="username rounded" autofocus="autofocus" />
-                                <span class="input-group-icon text-muted">
-                                    <i class="icm icm-user"></i>
-                                </span>
-                            </div>
-                            <span asp-validation-for="UsernameOrEmail"></span>
-                        </div> *@
-                        <div class="form-floating mb-3">
-                            <input asp-for="UsernameOrEmail" class="username" placeholder="@Html.DisplayNameFor(x => x.UsernameOrEmail)" />
-                            <label asp-for="UsernameOrEmail"></label>
-                            <span asp-validation-for="UsernameOrEmail"></span>
-                        </div>
-                    }
-
-                    @*<div class="form-group">
-                        <div class="input-group input-group-lg has-icon">
-                            <input asp-for="Password" class="password rounded" autocomplete="off" />
-                            <span class="input-group-icon text-muted">
-                                <i class="icm icm-shield"></i>
-                            </span>
-                        </div>
-                        <span asp-validation-for="Password"></span>
-                    </div> *@
-                    <div class="form-floating mb-3">
-                        <input asp-for="Password" class="password" autocomplete="off" placeholder="@Html.DisplayNameFor(x => x.Password)" />
-                        <label asp-for="Password"></label>
-                        <span asp-validation-for="Password"></span>
-                        <button type="button" class="btn btn-secondary btn-flat btn-no-border btn-icon btn-sm rounded-circle position-absolute" style="right: 8px; top: 50%; transform: translateY(-50%)">
-                            <i class="icm icm-eye-crossed"></i>
-                        </button>
-                    </div>
-
-                    <div class="form-group d-flex justify-content-between">
-                        <input asp-for="RememberMe" sm-switch="false" />
-                        <div class="forgot-password">
-                            <a asp-route="PasswordRecovery" rel="nofollow">@T("Account.Login.ForgotPassword")</a>
+	
+    <div class="row mb-4 xd-none">
+        <div class="col-12 col-xl-8 offset-xl-2">
+            <div class="page-title">
+                <h1>@T("Account.Login.Welcome")</h1>
+            </div>
+            <div class="card shadow-sm xborder-0 rounded-lg overflow-hidden">
+                <div class="row">
+                    <div class="col-12 col-lg-7">
+                        <div class="p-4">
+                            @{ await SignInBlock(); }
                         </div>
                     </div>
-
-                    <captcha sm-enabled="Model.DisplayCaptcha" class="form-group" />
-
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-lg btn-block btn-login btn-prevent-multiclick">
-                            @T("Account.Login.LoginButton")
-                        </button>
-                    </div>
-
-                    <div sm-suppress-if-empty-zone="external_auth_buttons" class="form-group external-auth-buttons mb-0">
-                        <div class="text-center text-uppercase mb-2">
-                            - @T("Common.Or") -
-                        </div>
-                        <div class="vstack gap-2">
-                            <zone name="external_auth_buttons" />
+                    <div class="col-12 col-lg-5 login-box d-flex align-items-center">
+                        <div class="p-4">
+                            @{ await RegisterBlock(); }
                         </div>
                     </div>
-
-                    <zone name="after_login_buttons" />
-                </form>
-			</div>
-		</div>
-		<div class="col-12 col-md-5 col-lg-6 col-xl-7 col-xxl-8 order-md-first">
-			<div class="page-info">
-				@await Component.InvokeAsync("TopicBlock", new { systemName = "LoginRegistrationInfo", bodyOnly = true, isLead = true })
-			</div>
-
-			<div class="register-block">
-				@if (Model.CheckoutAsGuest)
-				{
-                    @await Component.InvokeAsync("TopicBlock", new { systemName = "CheckoutAsGuestOrRegister", bodyOnly = true })
-					<div class="row sm-gutters">
-						<div class="col-sm-6 col-md-12 col-lg-6 pb-2 pb-lg-0">
-							<a class="btn btn-warning btn-lg btn-block register-button" href="@registerUrl">
-								@T("Account.Register.Button")
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-12 col-lg-6">
-							<a class="btn btn-secondary btn-lg btn-block checkout-as-guest-button" asp-route="Checkout">
-								<span>@T("Account.Login.CheckoutAsGuest")</span>
-								<i class="fa fa-angle-right"></i>
-							</a>
-						</div>
-					</div>
-				}
-				else
-				{
-					<div class="row">
-						<div class="col-12 col-lg-auto">
-							<a class="btn btn-warning btn-lg btn-block register-button" href="@registerUrl">
-								@T("Account.Register.Button")
-							</a>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-	</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
