--- a/src/Smartstore.Web/Areas/Admin/Views/Export/_Tab.Deployment.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Export/_Tab.Deployment.cshtml
@@ -37,7 +37,7 @@
             &nbsp;
         </div>
         <div class="adminData">
-            <partial name="_ResolveTokensExample" model="Model.ResolveTokensExample" />
+            <partial name="_ResolveTokensExample" model="Model.FileNamePatternExample" />
         </div>
     </div>
     <div class="adminRow">
