Revamped SignIn / Register page

--- a/src/Smartstore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Smartstore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -202,7 +202,7 @@
                 ThemeVarEditor("nav-tabs-active-link-color");
                 ThemeVarEditor("product-price-color");
                 ThemeVarEditor("product-detail-addtocart-box-bg");
-                ThemeVarEditor("login-box-bg");
+                ThemeVarEditor("register-box-bg");
                 ThemeVarEditor("cart-footer-bg");
                 ThemeVarEditor("costep-progress-color", null, T("Admin.ThemeVar.CostepPogressColor"));
                 ThemeVarEditor("offcanvas-cart-footer");
