--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_variables-configured.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_variables-configured.scss
@@ -114,7 +114,7 @@ $shopbar-label: null !default;
 $nav-tabs-active-link-color: null !default;
 $product-price-color: null !default;
 $product-detail-addtocart-box-bg: null !default;
-$login-box-bg: null !default;
+$register-box-bg: null !default;
 $cart-footer-bg: null !default;
 $costep-progress-color: null !default;
 $offcanvas-cart-footer: null !default;
