--- a/src/Smartstore.Web/Views/Identity/Login.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Login.cshtml
@@ -167,20 +167,20 @@
 
 <div class="page login-page">
 	
-    <div class="row mb-4 xd-none">
-        <div class="col-12 col-xl-8 offset-xl-2">
+    <div class="row mb-4">
+        <div class="col-12 col-md-10 offset-md-1 col-xl-8 offset-xl-2">
             <div class="page-title">
                 <h1>@T("Account.Login.Welcome")</h1>
             </div>
-            <div class="card shadow-sm xborder-0 rounded-lg overflow-hidden">
+            <div class="card shadow-sm rounded-lg overflow-hidden">
                 <div class="row">
-                    <div class="col-12 col-lg-7">
-                        <div class="p-4">
+                    <div class="col-12 col-lg-7 login-box">
+                        <div class="p-3 p-xxl-4">
                             @{ await SignInBlock(); }
                         </div>
                     </div>
-                    <div class="col-12 col-lg-5 login-box d-flex align-items-center">
-                        <div class="p-4">
+                    <div class="col-12 col-lg-5 register-box d-flex align-items-center">
+                        <div class="p-3 p-xxl-4">
                             @{ await RegisterBlock(); }
                         </div>
                     </div>
