Minor fix for last commit

--- a/src/Smartstore.Web/Views/Identity/Login.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Login.cshtml
@@ -41,7 +41,7 @@
     <span asp-validation-for="Username"></span>
     </div> *@
                 <div class="form-floating mb-3">
-                    <input asp-for="Username" class="username" placeholder="@Html.DisplayNameFor(x => x.Username)" />
+                    <input asp-for="Username" class="username" autofocus="autofocus" placeholder="@Html.DisplayNameFor(x => x.Username)" />
                     <label asp-for="Username"></label>
                     <span asp-validation-for="Username"></span>
                 </div>
@@ -58,7 +58,7 @@
     <span asp-validation-for="Email"></span>
     </div> *@
                 <div class="form-floating mb-3">
-                    <input asp-for="Email" class="email" placeholder="@Html.DisplayNameFor(x => x.Email)" />
+                    <input asp-for="Email" class="email" autofocus="autofocus" placeholder="@Html.DisplayNameFor(x => x.Email)" />
                     <label asp-for="Email"></label>
                     <span asp-validation-for="Email"></span>
                 </div>
@@ -75,7 +75,7 @@
     <span asp-validation-for="UsernameOrEmail"></span>
     </div>*@
                 <div class="form-floating mb-3">
-                    <input asp-for="UsernameOrEmail" class="username" placeholder="@Html.DisplayNameFor(x => x.UsernameOrEmail)" />
+                    <input asp-for="UsernameOrEmail" class="username" autofocus="autofocus" placeholder="@Html.DisplayNameFor(x => x.UsernameOrEmail)" />
                     <label asp-for="UsernameOrEmail"></label>
                     <span asp-validation-for="UsernameOrEmail"></span>
                 </div>
