--- a/src/Smartstore.Web/Views/Identity/Login.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Login.cshtml
@@ -31,15 +31,6 @@
             <input asp-for="CustomerLoginType" type="hidden" />
             @if (Model.CustomerLoginType == CustomerLoginType.Username)
             {
-                @*<div class="form-group">
-    <div class="input-group input-group-lg has-icon">
-    <input asp-for="Username" class="username rounded" autofocus="autofocus" />
-    <span class="input-group-icon text-muted">
-    <i class="icm icm-user"></i>
-    </span>
-    </div>
-    <span asp-validation-for="Username"></span>
-    </div> *@
                 <div class="form-floating mb-3">
                     <input asp-for="Username" class="username" autofocus="autofocus" placeholder="@Html.DisplayNameFor(x => x.Username)" />
                     <label asp-for="Username"></label>
@@ -48,15 +39,6 @@
             }
             else if (Model.CustomerLoginType == CustomerLoginType.Email)
             {
-                @*<div class="form-group">
-    <div class="input-group input-group-lg has-icon">
-    <input asp-for="Email" class="email rounded" autofocus="autofocus" />
-    <span class="input-group-icon text-muted">
-    <i class="icm icm-envelope-open"></i>
-    </span>
-    </div>
-    <span asp-validation-for="Email"></span>
-    </div> *@
                 <div class="form-floating mb-3">
                     <input asp-for="Email" class="email" autofocus="autofocus" placeholder="@Html.DisplayNameFor(x => x.Email)" />
                     <label asp-for="Email"></label>
@@ -65,15 +47,6 @@
             }
             else
             {
-                @*<div class="form-group">
-    <div class="input-group input-group-lg has-icon">
-    <input asp-for="UsernameOrEmail" class="username rounded" autofocus="autofocus" />
-    <span class="input-group-icon text-muted">
-    <i class="icm icm-user"></i>
-    </span>
-    </div>
-    <span asp-validation-for="UsernameOrEmail"></span>
-    </div>*@
                 <div class="form-floating mb-3">
                     <input asp-for="UsernameOrEmail" class="username" autofocus="autofocus" placeholder="@Html.DisplayNameFor(x => x.UsernameOrEmail)" />
                     <label asp-for="UsernameOrEmail"></label>
@@ -81,22 +54,13 @@
                 </div>
             }
 
-            @*<div class="form-group">
-    <div class="input-group input-group-lg has-icon">
-    <input asp-for="Password" class="password rounded" autocomplete="off" />
-    <span class="input-group-icon text-muted">
-    <i class="icm icm-shield"></i>
-    </span>
-    </div>
-    <span asp-validation-for="Password"></span>
-    </div> *@
             <div class="form-floating mb-3">
                 <input asp-for="Password" class="password" autocomplete="off" placeholder="@Html.DisplayNameFor(x => x.Password)" />
-                <label asp-for="Password"></label>
-                <span asp-validation-for="Password"></span>
-                <button type="button" class="btn btn-secondary btn-flat btn-no-border btn-icon btn-sm rounded-circle position-absolute" style="right: 8px; top: 50%; transform: translateY(-50%)">
+                <button type="button" class="btn-toggle-pwd">
                     <i class="fa fa-eye-slash"></i>
                 </button>
+                <label asp-for="Password"></label>
+                <span asp-validation-for="Password"></span>
             </div>
 
             <div class="form-group d-flex justify-content-between">
