--- a/src/Smartstore.Web/wwwroot/shared/_forms.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_forms.scss
@@ -219,6 +219,7 @@ fieldset.content-group {
     border: 0;
     outline: 0;
     background: transparent;
+    z-index: 10;
 
     input[type=password] + & {
         color: var(--gray-600);
