--- a/src/Smartstore.Web/Views/Install/_InstallForm.cshtml
+++ b/src/Smartstore.Web/Views/Install/_InstallForm.cshtml
@@ -174,6 +174,9 @@
                                                 <div class="col">
                                                     <div class="has-icon">
                                                         <input asp-for="DbPassword" class="form-control remember" placeholder="@T("DbPassword")" />
+                                                        <button type="button" class="btn-toggle-pwd">
+                                                            <i class="far fa-fw fa-eye-slash"></i>
+                                                        </button>
                                                         <span class="input-group-icon text-muted"><i class="icm icm-shield" style="line-height: inherit"></i></span>
                                                     </div>
                                                     <span asp-validation-for="DbPassword"></span>
