--- a/src/Smartstore.Web/Views/Install/_ViewImports.cshtml
+++ b/src/Smartstore.Web/Views/Install/_ViewImports.cshtml
@@ -15,3 +15,4 @@
 @addTagHelper Smartstore.Web.TagHelpers.Shared.HtmlZoneTagHelper, Smartstore.Web.Common
 @addTagHelper Smartstore.Web.TagHelpers.Shared.WidgetTagHelper, Smartstore.Web.Common
 @addTagHelper Smartstore.Web.TagHelpers.Shared.HtmlWidgetTagHelper, Smartstore.Web.Common
+@addTagHelper Smartstore.Web.TagHelpers.Shared.InputPasswordTagHelper, Smartstore.Web.Common
