--- a/src/Smartstore.Web/Views/Shared/Components/Menu/Main.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Menu/Main.cshtml
@@ -52,10 +52,12 @@
             var itemState = node.GetNodePathState(Model.Path);
 
             var attrs = item.GetCombinedAttributes().PrependCssClass("dropdown-item" + ((itemState & NodePathState.Selected) == NodePathState.Selected ? " selected" : ""));
-            
-            <a href="@itemUrl" id="dropdown-item-@item.Id" data-id="@item.Id" attrs="@attrs" >
-                <span sm-language-attributes-for="item">@item.Text</span>
-            </a>
+
+            <div id="dropdown-item-@item.Id" data-id="@item.Id">
+                <a href="@itemUrl" attrs="@attrs">
+                    <span sm-language-attributes-for="item">@item.Text</span>
+                </a>
+            </div>
         }
 
         if (isRoot)
