More on password visibility toggle

--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_ChangePasswordPopup.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_ChangePasswordPopup.cshtml
@@ -14,7 +14,7 @@
                         <smart-label asp-for="Password" />
                     </div>
                     <div class="adminData">
-                        <editor asp-for="Password" />
+                        <input asp-for="Password" type="password" />
                         <span asp-validation-for="Password"></span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                         <smart-label asp-for="ConfirmPassword" />
                     </div>
                     <div class="adminData">
-                        <editor asp-for="ConfirmPassword" />
+                        <input asp-for="ConfirmPassword" type="password" />
                         <span asp-validation-for="ConfirmPassword"></span>
                     </div>
                 </div>
