Widget zone preview

--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -9,9 +9,9 @@
 else
 {
     <span class="badge badge-primary badge-subtle badge-ring widget-zone-info text-truncate" title="@zoneName">
-        @zoneName
-        <button type="button" class="btn btn-clipboard btn-sm btn-flat btn-light" data-copy="@zoneName">
-            <i class="far fa-paste"></i>
-        </button>
+        <span class="text-truncate">@zoneName</span>
+        <a href="javascript:;" class="btn-clipboard pretty-link mr-1" data-copy="@zoneName">
+            <span><i class="far fa-paste"></i></span>
+        </a>
     </span>
 }
