--- a/src/Smartstore.Modules/Smartstore.DevTools/wwwroot/_core.scss
+++ b/src/Smartstore.Modules/Smartstore.DevTools/wwwroot/_core.scss
@@ -1,13 +1,13 @@
-/// <reference path="references.scss" />
+﻿/// <reference path="../../../Smartstore.Web/wwwroot/shared/references.scss" />
 
 //TODO: (mh) (core) A better solution must be found. Maybe something with an absolute position popup which doesn't disturb the flow
 
-.widget-zone-info {
+@mixin widget-zone-info() {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: start;
-    border: 1px dashed rgba(var(--badge-ring-color-rgb), 0.2);
+    border: 2px dotted rgba(var(--badge-ring-color-rgb), 0.2);
     margin-block: 3px;
     text-align: start;
     box-shadow: none !important;
@@ -16,13 +16,12 @@
         position: absolute;
         inset-inline-end: 0;
         opacity: 0;
+        font-size: $font-size-base;
+        background-color: rgba(var(--badge-bg-rgb), var(--badge-bg-opacity));
+        background-color: var(--badge-bg);
     }
 
     &:hover > .btn-clipboard {
         opacity: 1;
-    }
-
-    #header &, .options & {
-        display: inline-flex;
     }
 }
